<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CodePix</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="internet_error">    Unable to connect with server.\n Please check your Internet connection.  </string>
    <string name="process_long">Please try again.</string>
     <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="app_id">186520631540135</string>
    <string name="exception">Exception: %1$s</string>
    <string name="back">Back</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="birth_date_optional">BIRTH DATE (optional)</string>
    <string name="birth_date">BIRTH DATE</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="female">FEMALE</string>
    <string name="male">MALE</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="codepix_logo">CodePix</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="profile">PROFILE</string>
    <string name="save">SAVE</string>
    <string name="invite_friends">INVITE FRIENDS</string>
    <string name="logout">LOGOUT</string>
    <string name="search_codepix_friends">SEARCH CODE PIX FRIENDS</string>
    <string name="find_friends">FIND FRIENDS</string>
    <string name="invite_via_facebook">INVITE VIA FACEBOOK</string>
    <string name="invite_via_twitter">INVITE VIA TWITTER</string>
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>
    
    <string name="invite_friend_social_error">You are not connected to any social account.</string>
      <string name="error_sd_card_not_mounted">External storage is required. Your SD card is most likely not mounted.</string>
	<string name="error_could_not_take_photo">There was an issue with your camera. We are very sorry for the inconvenience!</string>
	
	<string name="acitvity_take_photo_start_camera_button">Take a picture!</string>
	<string name="acitvity_take_photo_image_view_desc">photo</string>
	<string name="message_to_unlock">To Unlock,tap an area on the image and press UNLOCK</string>
	<string name="message_to_unlock_success">You have unlocked this CodePix image.\n You can now view the secrete message \n and read any hidden comments available.</string>
	<string name="message_to_unlock_error">The gesture password you \n submitted is incorrect.Please try again.</string>   

</resources>
