<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/startscreen_bg"
    android:orientation="vertical" >
    <Button
        android:id="@+id/btnBack"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_margin="5dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="#FF0000"
        
         >
       
    </Button> 
    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" android:layout_marginTop="5dp"
        android:inputType="textPersonName" android:hint="@string/first_name" >
          
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" android:layout_marginTop="5dp"
        android:inputType="textPersonName" android:hint="@string/last_name" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" android:layout_marginTop="5dp"
        android:inputType="textEmailAddress" android:hint="@string/email" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" android:layout_marginTop="5dp"
        android:inputType="textPassword" android:hint="@string/password"/>

    <EditText
        android:id="@+id/edittextBirthDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" android:layout_marginTop="5dp"
        android:inputType="date" android:hint="@string/birth_date_optional" android:focusable="false" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/imageViewProfilePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/profile_picture"
            android:src="@drawable/default_profile" />

        <CheckBox
            android:id="@+id/checkBoxFeMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/checkBoxMale"
            android:layout_below="@+id/checkBoxMale"
            android:layout_marginTop="20dp"
            android:button="@drawable/checkbox_bg"
            android:text="@string/female"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/checkBoxMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="27dp"
            android:layout_toRightOf="@+id/imageViewProfilePicture"
            android:button="@drawable/checkbox_bg"
            android:text="@string/male"
            android:textColor="@android:color/black" />
    </RelativeLayout>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/codepix_loginscreen_submit_button" />

</LinearLayout>
</ScrollView>