<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
<RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".DeviceFragment" android:background="@drawable/startscreen_bg">

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/linearLayoutProfile"
        android:background="@drawable/input_box"
        android:ems="10" android:layout_marginRight="7dp"
        android:paddingLeft="5dp"
        android:inputType="textPersonName" android:hint="@string/first_name"/>

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/editTextFirstName"
        android:layout_below="@+id/editTextFirstName"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_box"
        android:ems="10" android:paddingLeft="5dp"
        android:inputType="textPersonName" android:hint="@string/last_name"/>

    <EditText
        android:id="@+id/editTextMobileNumber"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/editTextLastName"
        android:layout_below="@+id/editTextLastName"
        android:layout_marginTop="22dp"
        android:background="@drawable/input_box"
        android:ems="10" android:paddingLeft="5dp"
        android:inputType="numberDecimal" android:hint="@string/mobile_number" >

    </EditText>

    <EditText
        android:id="@+id/editTextBirthDate"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/editTextMobileNumber"
        android:layout_below="@+id/editTextMobileNumber"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_box" android:paddingLeft="5dp"
        android:ems="10" android:focusable="false"
        android:inputType="date" android:hint="@string/birth_date"/>

    <CheckBox
        android:id="@+id/checkBoxFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBoxMale"
        android:layout_alignBottom="@+id/checkBoxMale"
        android:layout_alignRight="@+id/editTextBirthDate"  android:textColor="@android:color/black"
        android:text="@string/female" android:button="@drawable/checkbox_selector"  />

    <CheckBox
        android:id="@+id/checkBoxMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextBirthDate"
        android:layout_below="@+id/editTextBirthDate"
        android:layout_marginTop="26dp"  android:textColor="@android:color/black"
        android:text="@string/male" android:button="@drawable/checkbox_selector"  />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_toRightOf="@+id/linearLayoutProfile"
        android:orientation="horizontal"
        android:background="@drawable/nav_bg"
        >
        <ImageView  android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/codepix_logo"
            android:src="@drawable/nav_logo"
            android:layout_weight="0"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="@style/AppBaseTheme"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
        
    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/linearLayoutProfile"
        android:layout_alignRight="@+id/checkBoxFemale"
        android:layout_below="@+id/checkBoxFemale"
        android:layout_marginTop="27dp"
        android:background="@drawable/btnbg"
        android:fontFamily="@style/AppBaseTheme"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

<RelativeLayout android:id="@+id/linearLayoutProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="7dp"
        android:layout_below="@+id/linearLayout">
    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/codepix_logo"
        android:src="@drawable/default_profile" />
     <ProgressBar
            android:id="@+id/progressImage"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible"/>
</RelativeLayout>
</RelativeLayout>
</ScrollView>