<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="1100dp">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/startscreen_bg"
    android:orientation="vertical"
    tools:context=".DeviceFragment" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
       
        android:background="@drawable/nav_bg"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:contentDescription="@string/codepix_logo"
            android:src="@drawable/nav_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="@style/AppBaseTheme"
            android:gravity="center"
            android:text="@string/find_friends"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
        
        <Button
        android:id="@+id/btnBack"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:text="@string/back"
        android:layout_margin="7dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="#FF0000"
         >
       
    </Button>
    </LinearLayout>

    <Button
        android:id="@+id/btnInviteViaFacebook"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp"
        android:background="@drawable/btnbg"
        android:fontFamily="@style/AppBaseTheme"
        android:text="@string/invite_via_facebook"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnInviteViaTwitter"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/btnInviteViaFacebook"
        android:layout_below="@+id/btnInviteViaFacebook"
        android:layout_marginTop="39dp"
        android:background="@drawable/btnbg"
        android:fontFamily="@style/AppBaseTheme"
        android:text="@string/invite_via_twitter"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</RelativeLayout>

</ScrollView>